Day17/ingress-path.yaml
# 建立 Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-path
  namespace: test
  labels:
    name: web
    environment: production
    method: traefik
spec:
  rules:
  - host: web.example.domain.com
    http:
      paths:  # 設定不同 path
      - pathType: Prefix
        path: "/web1"
        backend:
          service:
            name: test-service1
            port: 
              name: http
      - pathType: Prefix
        path: "/web2"
        backend:
          service:
            name: test-service2
            port: 
              name: http
